[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprite/FormBackground.png" type="Texture" id=1]
[ext_resource path="res://Other/Fipps-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Other/HoverFlat.tres" type="StyleBox" id=3]
[ext_resource path="res://Other/PressedFlat.tres" type="StyleBox" id=4]
[ext_resource path="res://Scene/Loading.tscn" type="PackedScene" id=5]
[ext_resource path="res://Script/LoginMenu.gd" type="Script" id=6]
[ext_resource path="res://Other/NormalFlat.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=1]
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -600 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "WhenEnter"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -600 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -600 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "WhenExit"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -600 ) ]
}

[node name="LoginMenu" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -600 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
centered = false

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, -600 )

[node name="UI2" type="VBoxContainer" parent="Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 312.0
margin_top = 225.0
margin_right = 714.0
margin_bottom = 381.0

[node name="TGap" type="MarginContainer" parent="Node2D/UI2"]
margin_right = 402.0

[node name="UserName" type="LineEdit" parent="Node2D/UI2"]
margin_top = 4.0
margin_right = 402.0
margin_bottom = 48.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/selection_color = Color( 0.921569, 0.929412, 0.913725, 1 )
custom_colors/cursor_color = Color( 0.12549, 0.180392, 0.215686, 1 )
custom_colors/font_color_selected = Color( 0.223529, 0.290196, 0.313726, 1 )
custom_colors/font_color = Color( 0.223529, 0.290196, 0.313726, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 7 )
align = 1
max_length = 20
placeholder_text = "UserName"
placeholder_alpha = 0.75
caret_blink = true

[node name="MGap" type="MarginContainer" parent="Node2D/UI2"]
margin_top = 52.0
margin_right = 402.0
margin_bottom = 52.0

[node name="Password" type="LineEdit" parent="Node2D/UI2"]
margin_top = 56.0
margin_right = 402.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/selection_color = Color( 0.921569, 0.929412, 0.913725, 1 )
custom_colors/cursor_color = Color( 0.12549, 0.180392, 0.215686, 1 )
custom_colors/font_color_selected = Color( 0.223529, 0.290196, 0.313726, 1 )
custom_colors/font_color = Color( 0.223529, 0.290196, 0.313726, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 7 )
align = 1
max_length = 20
secret = true
secret_character = "x"
placeholder_text = "Password"
placeholder_alpha = 0.75
caret_blink = true

[node name="BGap" type="MarginContainer" parent="Node2D/UI2"]
margin_top = 104.0
margin_right = 402.0
margin_bottom = 104.0

[node name="LoginButton" type="HBoxContainer" parent="Node2D/UI2"]
margin_top = 108.0
margin_right = 402.0
margin_bottom = 156.0

[node name="LGap" type="MarginContainer" parent="Node2D/UI2/LoginButton"]
margin_right = 134.0
margin_bottom = 48.0
rect_min_size = Vector2( 134, 0 )

[node name="Button" type="Button" parent="Node2D/UI2/LoginButton"]
margin_left = 138.0
margin_right = 264.0
margin_bottom = 48.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.396078, 0.427451, 0.411765, 1 )
custom_colors/font_color_focus = Color( 0.396078, 0.427451, 0.411765, 1 )
custom_colors/font_color = Color( 0.396078, 0.427451, 0.411765, 1 )
custom_colors/font_color_hover = Color( 0.396078, 0.427451, 0.411765, 1 )
custom_colors/font_color_pressed = Color( 0.396078, 0.427451, 0.411765, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "   Login   "

[node name="RGap" type="MarginContainer" parent="Node2D/UI2/LoginButton"]
margin_left = 268.0
margin_right = 402.0
margin_bottom = 48.0
rect_min_size = Vector2( 134, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UI" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -75.0
margin_right = 200.0
margin_bottom = 75.0

[node name="TGap" type="MarginContainer" parent="UI"]
margin_right = 402.0

[node name="UserName" type="LineEdit" parent="UI"]
margin_top = 4.0
margin_right = 402.0
margin_bottom = 48.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/selection_color = Color( 0.921569, 0.929412, 0.913725, 1 )
custom_colors/cursor_color = Color( 0.12549, 0.180392, 0.215686, 1 )
custom_colors/font_color_selected = Color( 0.223529, 0.290196, 0.313726, 1 )
custom_colors/font_color = Color( 0.223529, 0.290196, 0.313726, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 7 )
align = 1
max_length = 20
placeholder_text = "UserName"
placeholder_alpha = 0.75
caret_blink = true

[node name="MGap" type="MarginContainer" parent="UI"]
margin_top = 52.0
margin_right = 402.0
margin_bottom = 52.0

[node name="Password" type="LineEdit" parent="UI"]
margin_top = 56.0
margin_right = 402.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/selection_color = Color( 0.921569, 0.929412, 0.913725, 1 )
custom_colors/cursor_color = Color( 0.12549, 0.180392, 0.215686, 1 )
custom_colors/font_color_selected = Color( 0.223529, 0.290196, 0.313726, 1 )
custom_colors/font_color = Color( 0.223529, 0.290196, 0.313726, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 7 )
align = 1
max_length = 20
secret = true
secret_character = "x"
placeholder_text = "Password"
placeholder_alpha = 0.75
caret_blink = true

[node name="BGap" type="MarginContainer" parent="UI"]
margin_top = 104.0
margin_right = 402.0
margin_bottom = 104.0

[node name="LoginButton" type="HBoxContainer" parent="UI"]
margin_top = 108.0
margin_right = 402.0
margin_bottom = 156.0

[node name="LGap" type="MarginContainer" parent="UI/LoginButton"]
margin_right = 134.0
margin_bottom = 48.0
rect_min_size = Vector2( 134, 0 )

[node name="Button" type="Button" parent="UI/LoginButton"]
margin_left = 138.0
margin_right = 264.0
margin_bottom = 48.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.396078, 0.427451, 0.411765, 1 )
custom_colors/font_color_focus = Color( 0.396078, 0.427451, 0.411765, 1 )
custom_colors/font_color = Color( 0.396078, 0.427451, 0.411765, 1 )
custom_colors/font_color_hover = Color( 0.396078, 0.427451, 0.411765, 1 )
custom_colors/font_color_pressed = Color( 0.396078, 0.427451, 0.411765, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "   Login   "

[node name="RGap" type="MarginContainer" parent="UI/LoginButton"]
margin_left = 268.0
margin_right = 402.0
margin_bottom = 48.0
rect_min_size = Vector2( 134, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/WhenEnter = SubResource( 5 )
anims/WhenExit = SubResource( 4 )

[node name="Loading" parent="." instance=ExtResource( 5 )]

[connection signal="text_changed" from="Node2D/UI2/UserName" to="." method="_on_UserName_text_changed"]
[connection signal="text_changed" from="Node2D/UI2/Password" to="." method="_on_Password_text_changed"]
[connection signal="pressed" from="Node2D/UI2/LoginButton/Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="UI/UserName" to="." method="_on_UserName_text_changed"]
[connection signal="text_changed" from="UI/Password" to="." method="_on_Password_text_changed"]
[connection signal="pressed" from="UI/LoginButton/Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
